--- a/portfolio.html
+++ b/portfolio.html
@@ -19,82 +19,88 @@
 
 <body>
     <header class="header">
-        <nav class="site-nav">
-            <a href="./index.html" class="logo"><span class="accent-logo">Web</span>Studio</a>
-            <ul>
-                <li><a href="./index.html" class="link">Студия</a></li>
-                <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-                <li><a href="" class="link">Контакты</a></li>
+        <div class="container">
+            <nav class="site-nav">
+                <a href="./index.html" class="logo"><span class="accent-logo">Web</span>Studio</a>
+                <ul>
+                    <li><a href="./index.html" class="link">Студия</a></li>
+                    <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+                    <li><a href="" class="link">Контакты</a></li>
+                </ul>
+            </nav>
+            <!--contacts-->
+            <div>
+            <ul class="contacts-nav">
+                <li class="e-mail" lang="en"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li class="telephone"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <!--contacts-->
-        <div>
-        <ul class="contacts-nav">
-            <li class="e-mail" lang="en"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li class="telephone"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-        </ul>
+            </div>
         </div>
     </header>
 
     
     <main class="portfolio-page">
-    <!-- фильтр работ aka набор радиокнопок -->
-        <div class="radiobuttons-set">
-        <ul>
-        <li><button class="button" type="button">Все</button></li>
-        <li><button class="button" type="button">Веб-сайты</button></li>
-        <li><button class="button" type="button">Приложения</button></li>
-        <li><button class="button" type="button">Дизайн</button></li>
-        <li><button class="button" type="button">Маркетинг</button></li>
-        </ul>
-        </div>
-
-    <!-- наши работы -->
-        <section class="portfolio-projects">
-        <!-- заголовок спрячется, но добавить aria label -->
-        <h1>Наши работы</h1>
+        <div class="container">
+        <!-- фильтр работ aka набор радиокнопок -->
+            <div class="radiobuttons-set">
             <ul>
-            <li class="project-01"><img src="./img/img_porfolio/img01.jpg" alt="вебсайт Технокряк" width="370">
-                <h4 class="project-title">Технокряк</h4>
-                <p class="project-description">Веб-сайт</p></li>
-            <li class="project-02"><img src="./img/img_porfolio/img02.jpg" alt="дизайн постера New Orlean" width="370">
-                <h4 class="project-title">Постер New Orlean vs Golden Star</h4>
-                <p class="project-description">Дизайн</p></li>
-            <li class="project-03"><img src="./img/img_porfolio/img03.jpg" alt="приложение ресторана Seafood" width="370">
-                <h4 class="project-title">Ресторан Seafood</h4>
-                <p class="project-description">Приложение</p></li>
-            <li class="project-04"><img src="./img/img_porfolio/img04.jpg" alt="маркетинг проекта Prime" width="370">
-                <h4 class="project-title">Проект Prime</h4>
-                <p class="project-description">Маркетинг</p></li>
-            <li class="project-05"><img src="./img/img_porfolio/img05.jpg" alt="приложение Boxes" width="370">
-                <h4 class="project-title">Проект Boxes</h4>
-                <p class="project-description">Приложение</p></li>
-            <li class="project-06"><img src="./img/img_porfolio/img06.jpg" alt="вебсайт Inspiration" width="370">
-                <h4 class="project-title">Inspiration has no Borders</h4>
-                <p class="project-description">Веб-сайт</p></li>
-            <li class="project-07"><img src="./img/img_porfolio/img07.jpg" alt="дизайн издания Limited Edition" width="370">
-                <h4 class="project-title">Издание Limited Edition</h4>
-                <p class="project-description">Дизайн</p></li>
-            <li class="project-08"><img src="./img/img_porfolio/img08.jpg" alt="маркетинг проекта LAB" width="370">
-                <h4 class="project-title">Проект LAB</h4>
-                <p class="project-description">Маркетинг</p></li>
-            <li class="project-09"><img src="./img/img_porfolio/img09.jpg" alt="приложение Growing Business" width="370">
-                <h4 class="project-title">Growing Business</h4>
-                <p class="project-description">Приложение</p></li></ul>
-        </section>
+            <li><button class="button" type="button">Все</button></li>
+            <li><button class="button" type="button">Веб-сайты</button></li>
+            <li><button class="button" type="button">Приложения</button></li>
+            <li><button class="button" type="button">Дизайн</button></li>
+            <li><button class="button" type="button">Маркетинг</button></li>
+            </ul>
+            </div>
+
+        <!-- наши работы -->
+            <section class="portfolio-projects">
+            <!-- заголовок спрячется, но добавить aria label -->
+            <h1>Наши работы</h1>
+                <ul>
+                <li class="project-01"><img src="./img/img_porfolio/img01.jpg" alt="вебсайт Технокряк" width="370">
+                    <h4 class="project-title">Технокряк</h4>
+                    <p class="project-description">Веб-сайт</p></li>
+                <li class="project-02"><img src="./img/img_porfolio/img02.jpg" alt="дизайн постера New Orlean" width="370">
+                    <h4 class="project-title">Постер New Orlean vs Golden Star</h4>
+                    <p class="project-description">Дизайн</p></li>
+                <li class="project-03"><img src="./img/img_porfolio/img03.jpg" alt="приложение ресторана Seafood" width="370">
+                    <h4 class="project-title">Ресторан Seafood</h4>
+                    <p class="project-description">Приложение</p></li>
+                <li class="project-04"><img src="./img/img_porfolio/img04.jpg" alt="маркетинг проекта Prime" width="370">
+                    <h4 class="project-title">Проект Prime</h4>
+                    <p class="project-description">Маркетинг</p></li>
+                <li class="project-05"><img src="./img/img_porfolio/img05.jpg" alt="приложение Boxes" width="370">
+                    <h4 class="project-title">Проект Boxes</h4>
+                    <p class="project-description">Приложение</p></li>
+                <li class="project-06"><img src="./img/img_porfolio/img06.jpg" alt="вебсайт Inspiration" width="370">
+                    <h4 class="project-title">Inspiration has no Borders</h4>
+                    <p class="project-description">Веб-сайт</p></li>
+                <li class="project-07"><img src="./img/img_porfolio/img07.jpg" alt="дизайн издания Limited Edition" width="370">
+                    <h4 class="project-title">Издание Limited Edition</h4>
+                    <p class="project-description">Дизайн</p></li>
+                <li class="project-08"><img src="./img/img_porfolio/img08.jpg" alt="маркетинг проекта LAB" width="370">
+                    <h4 class="project-title">Проект LAB</h4>
+                    <p class="project-description">Маркетинг</p></li>
+                <li class="project-09"><img src="./img/img_porfolio/img09.jpg" alt="приложение Growing Business" width="370">
+                    <h4 class="project-title">Growing Business</h4>
+                    <p class="project-description">Приложение</p></li></ul>
+            </section>
+        </div>
     </main>
 
     <footer class="footer">
-        <a href="./index.html" class="footer-logo"><span class="accent-logo">Web</span>Studio</a>
-        <address lang="ru">
-            <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383859"
-                class="footer-address">г.Киев
-                пр-т Леси Украинки, 26</a>
-        </address>
-        <ul class="footer-links">
-            <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
-        </ul>
+        <div class="container">
+            <a href="./index.html" class="footer-logo"><span class="accent-logo">Web</span>Studio</a>
+            <address lang="ru">
+                <a href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383859"
+                    class="footer-address">г.Киев
+                    пр-т Леси Украинки, 26</a>
+            </address>
+            <ul class="footer-links">
+                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
