portfolio card links added

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
         <!-- заголовок спрячется, но добавить aria label -->
         <h1 class="portfolio-title">Наши работы</h1>
         <ul class="portfolio-projects-list list">
-          <li class="portfolio-projects-list-item"><a href="">
+          <li class="portfolio-projects-list-item"><a class="portfolio-project-card-link link" href="">
               <img class="portfolio-project-photo" src="./img/img_porfolio/img01.jpg" alt="вебсайт Технокряк" width="370">
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Технокряк</h2>
@@ -70,7 +70,7 @@
               </div>
             </a>
           </li>
-          <li class="portfolio-projects-list-item"><a href="">
+          <li class="portfolio-projects-list-item"><a class="portfolio-project-card-link link" href="">
               <img class="portfolio-project-photo" src="./img/img_porfolio/img02.jpg" alt="дизайн постера New Orlean"
                 width="370">
               <div class="portfolio-project-card-text">
@@ -79,7 +79,7 @@
               </div>
             </a>
           </li>
-          <li class="portfolio-projects-list-item"> <a href=""><img class="portfolio-project-photo"
+          <li class="portfolio-projects-list-item"> <a class="portfolio-project-card-link link" href=""><img class="portfolio-project-photo"
                 src="./img/img_porfolio/img03.jpg" alt="приложение ресторана Seafood" width="370">
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Ресторан Seafood</h2>
@@ -87,7 +87,7 @@
               </div>
             </a>
           </li>
-          <li class="portfolio-projects-list-item"> <a href=""><img class="portfolio-project-photo"
+          <li class="portfolio-projects-list-item"> <a class="portfolio-project-card-link link" href=""><img class="portfolio-project-photo"
                 src="./img/img_porfolio/img04.jpg" alt="маркетинг проекта Prime" width="370">
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Проект Prime</h2>
@@ -95,7 +95,7 @@
               </div>
             </a>
           </li>
-          <li class="portfolio-projects-list-item"> <a href=""><img class="portfolio-project-photo"
+          <li class="portfolio-projects-list-item"> <a class="portfolio-project-card-link link" href=""><img class="portfolio-project-photo"
                 src="./img/img_porfolio/img05.jpg" alt="приложение Boxes" width="370">
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Проект Boxes</h2>
@@ -103,7 +103,7 @@
               </div>
             </a>
           </li>
-          <li class="portfolio-projects-list-item"> <a href=""><img class="portfolio-project-photo"
+          <li class="portfolio-projects-list-item"> <a class="portfolio-project-card-link link" href=""><img class="portfolio-project-photo"
                 src="./img/img_porfolio/img06.jpg" alt="вебсайт Inspiration" width="370">
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Inspiration has no Borders</h2>
@@ -111,7 +111,7 @@
               </div>
             </a>
           </li>
-          <li class="portfolio-projects-list-item"> <a href=""><img class="portfolio-project-photo"
+          <li class="portfolio-projects-list-item"> <a class="portfolio-project-card-link link" href=""><img class="portfolio-project-photo"
                 src="./img/img_porfolio/img07.jpg" alt="дизайн издания Limited Edition" width="370">
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Издание Limited Edition</h2>
@@ -119,7 +119,7 @@
               </div>
             </a>
           </li>
-          <li class="portfolio-projects-list-item"> <a href=""><img class="portfolio-project-photo"
+          <li class="portfolio-projects-list-item"> <a class="portfolio-project-card-link link" href=""><img class="portfolio-project-photo"
                 src="./img/img_porfolio/img08.jpg" alt="маркетинг проекта LAB" width="370">
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Проект LAB</h2>
@@ -127,7 +127,7 @@
               </div>
             </a>
           </li>
-          <li class="portfolio-projects-list-item"> <a href=""><img class="portfolio-project-photo"
+          <li class="portfolio-projects-list-item"> <a class="portfolio-project-card-link link" href=""><img class="portfolio-project-photo"
                 src="./img/img_porfolio/img09.jpg" alt="приложение Growing Business" width="370">
               <div class="portfolio-project-card-text">
                 <h2 class="project-title">Growing Business</h2>
